tests/rosetta/out/C/binary-strings.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:06Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:06Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
static int i = 0;

char *_char(int n) {
  char *letters = "abcdefghijklmnopqrstuvwxyz";
  int idx = n - 97;
  if (idx < 0 || idx >= strlen(letters)) {
    return "?";
  }
  return slice_string(letters, idx, idx + 1);
}

char *fromBytes(list_int bs) {
  char *s = "";
  int i = 0;
  while (i < bs.len) {
    char *tmp1 = concat_string(s, _char(bs.data[i]));
    s = tmp1;
    i = i + 1;
  }
  return s;
}

int _mochi_main() {
  list_int b = list_int_create(6);
  b.data[0] = 98;
  b.data[1] = 105;
  b.data[2] = 110;
  b.data[3] = 97;
  b.data[4] = 114;
  b.data[5] = 121;
  list_int tmp2 = list_int_create(6);
  tmp2.data[0] = 98;
  tmp2.data[1] = 105;
  tmp2.data[2] = 110;
  tmp2.data[3] = 97;
  tmp2.data[4] = 114;
  tmp2.data[5] = 121;
  char *tmp3 = _str(tmp2);
  printf("%s\n", tmp3);
  list_int c = list_int_create(6);
  c.data[0] = 98;
  c.data[1] = 105;
  c.data[2] = 110;
  c.data[3] = 97;
  c.data[4] = 114;
  c.data[5] = 121;
  list_int tmp4 = list_int_create(6);
  tmp4.data[0] = 98;
  tmp4.data[1] = 105;
  tmp4.data[2] = 110;
  tmp4.data[3] = 97;
  tmp4.data[4] = 114;
  tmp4.data[5] = 121;
  char *tmp5 = _str(tmp4);
  printf("%s\n", tmp5);
  int tmp6 = 1;
  if (6 != 6) {
    tmp6 = 0;
  } else {
    for (int i7 = 0; i7 < 6; i7++) {
      if (b.data[i7] != c.data[i7]) {
        tmp6 = 0;
        break;
      }
    }
  }
  char *tmp8 = _str(tmp6);
  printf("%s\n", tmp8);
  list_int d = list_int_create(0);
  while (i < 6) {
    int tmp9_data[1];
    list_int tmp9 = {1, tmp9_data};
    tmp9.data[0] = b.data[i];
    list_int tmp10 = concat_list_int(d, tmp9);
    d = tmp10;
    i = i + 1;
  }
  d.data[1] = 97;
  d.data[4] = 110;
  list_int tmp11 = list_int_create(6);
  tmp11.data[0] = 98;
  tmp11.data[1] = 105;
  tmp11.data[2] = 110;
  tmp11.data[3] = 97;
  tmp11.data[4] = 114;
  tmp11.data[5] = 121;
  printf("%s\n", fromBytes(tmp11));
  printf("%s\n", fromBytes(d));
  char *tmp12 = _str(6 == 0);
  printf("%s\n", tmp12);
  list_int tmp13 = list_int_create(7);
  tmp13.data[0] = 98;
  tmp13.data[1] = 105;
  tmp13.data[2] = 110;
  tmp13.data[3] = 97;
  tmp13.data[4] = 114;
  tmp13.data[5] = 121;
  tmp13.data[6] = 122;
  list_int z = tmp13;
  printf("%s\n", fromBytes(z));
  list_int tmp14 = slice_list_int(b, 1, 3);
  list_int sub = tmp14;
  printf("%s\n", fromBytes(sub));
  list_int f = list_int_create(0);
  i = 0;
  while (i < d.len) {
    int val = d.data[i];
    if (val == 110) {
      int tmp15_data[1];
      list_int tmp15 = {1, tmp15_data};
      tmp15.data[0] = 109;
      list_int tmp16 = concat_list_int(f, tmp15);
      f = tmp16;
    } else {
      int tmp17_data[1];
      list_int tmp17 = {1, tmp17_data};
      tmp17.data[0] = val;
      list_int tmp18 = concat_list_int(f, tmp17);
      f = tmp18;
    }
    i = i + 1;
  }
  char *tmp19 = concat_string(fromBytes(d), " -> ");
  char *tmp20 = concat_string(tmp19, fromBytes(f));
  printf("%s\n", tmp20);
  list_int rem = list_int_create(0);
  int tmp21_data[1];
  list_int tmp21 = {1, tmp21_data};
  tmp21.data[0] = b.data[0];
  list_int tmp22 = concat_list_int(rem, tmp21);
  rem = tmp22;
  i = 3;
  while (i < 6) {
    int tmp23_data[1];
    list_int tmp23 = {1, tmp23_data};
    tmp23.data[0] = b.data[i];
    list_int tmp24 = concat_list_int(rem, tmp23);
    rem = tmp24;
    i = i + 1;
  }
  printf("%s\n", fromBytes(rem));
  return 0;
}
int main() { return _mochi_main(); }
